--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}WDP{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 </head>
 <body class="container mt-4">
     <h1 class="mb-4">Wild Dump Prevention Platform</h1>
