--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -3,11 +3,14 @@
 {% block content %}
 
 <div class="btn-group mb-3" role="group" aria-label="Upload mode">
-  <input type="radio" class="btn-check" name="uploadMode" id="singleMode" value="single" autocomplete="off" checked onchange="setUploadMode()">
-  <label class="btn btn-outline-primary" for="singleMode">Single</label>
+    <input type="radio" class="btn-check" name="uploadMode" id="singleMode" value="single" autocomplete="off" checked onchange="setUploadMode()">
+    <label class="btn btn-outline-primary" for="singleMode">Unitaire</label>
 
-  <input type="radio" class="btn-check" name="uploadMode" id="batchMode" value="batch" autocomplete="off" onchange="setUploadMode()">
-  <label class="btn btn-outline-primary" for="batchMode">Multiple</label>
+    <input type="radio" class="btn-check" name="uploadMode" id="batchMode" value="batch" autocomplete="off" onchange="setUploadMode()">
+    <label class="btn btn-outline-primary" for="batchMode">Multiple</label>
+
+    <input type="radio" class="btn-check" name="uploadMode" id="videoMode" value="video" autocomplete="off" onchange="setUploadMode()">
+    <label class="btn btn-outline-primary" for="videoMode">Vidéo</label>
 </div>
 
 <!-- Upload form -->
@@ -21,21 +24,25 @@
 
 <script>
 function setUploadMode() {
-  const single = document.getElementById("singleMode").checked;
-  const input = document.getElementById("imageInput");
-  const label = document.getElementById("uploadLabel");
+    const multiple = document.getElementById("batchMode").checked;
+    const video = document.getElementById("videoMode").checked;
+    const input = document.getElementById("imageInput");
+    const label = document.getElementById("uploadLabel");
+    input.value = "";
 
-  input.value = "";
-
-  if (single) {
-    input.removeAttribute("multiple");
-    input.setAttribute("name", "image");
-    label.textContent = "Choisir une image"
-  } else {
-    input.setAttribute("multiple", "multiple");
-    input.setAttribute("name", "images");
-    label.textContent = "Choisir des images"
-  }
+    if (multiple) {
+        input.setAttribute("multiple", "multiple");
+        input.setAttribute("name", "images");
+        label.textContent = "Choisir des images"
+    } else if (video) {
+        input.removeAttribute("multiple");
+        input.setAttribute("name", "video")
+        label.textContent = "Choisir une vidéo"
+    } else {
+        input.removeAttribute("multiple");
+        input.setAttribute("name", "image");
+        label.textContent = "Choisir une image"
+    }
 }
 </script>
 
